# advent-of-code-2023

./: README.md  notes.txt  pyproject.toml
day-01/: part1.py  part2.py  solve.py
day-02/: part1.py  part2.py
day-03/: part1.py  part2.py  test_part1.py  test_part2.py
day-04/: part1.py  part2.py  test_part1.py  test_part2.py
day-05/: notes.txt  part1.py  part2.py  test_part1.py  test_part2.py
day-06/: part1.py  part2.py
day-07/: part1.py  part2.py  test_part1.py  test_part2.py
day-08/: part1.py  part2.py
day-09/: part1.py  part2.py
day-10/: notes.txt  part1.py  part2.py  test_part1.py  test_part2.py
day-11/: part1.py  part2.py
day-12/: notes.txt  part1.py  part2.py  test_part1.py
day-13/: part1.py  part2.py
day-14/: notes.txt  part1.py  part2.py
day-15/: notes.txt  part1.py  part2.py
day-16/: part1.py  part2.py
day-17/: notes.txt  part1.py  part2.py  sample2.txt  test_part1.py
day-18/: part1.py  part2.py  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt  sample8.txt  test_part1.py  test_part2.py
day-19/: aoc-2023-day-19.excalidraw  notes.txt  part1.py  part2.py  test_part2.py
day-20/: day-2-part2.excalidraw  graph1.ps  input-mapping.txt  input2.txt  notes.txt  part1.py  part2.py
day-21/: day-21-part2.excalidraw  part1.py  part2.py  test_part1.py
day-22/: part1.py  part2.py
day-23/: notes.txt  part1.py  part2.py  test_part1.py
day-24/: part1.py  part2.py
day-25/: part1.py  test_part1.py
