[tool.poetry]
name = "advent-of-code-23"
version = "0.1.0"
description = ""
authors = ["olivier <olibitter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
scikit-image = "^0.22.0"
z3-solver = "^4.13.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
